--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "moment": "^2.14.1",
     "passport": "^0.3.2",
     "passport-yahoo": "^0.3.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
@@ -22,7 +24,8 @@
   },
   "scripts": {
     "upload": "zip -r -X Archive.zip *",
-    "start": "node server/app.js"
+    "start": "node server/server.js",
+    "start:dev": "nodemon server/server.js && webpack --watch"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
@@ -30,6 +33,11 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "mocha": "^3.0.1",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.0",
