--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "moment": "^2.14.1",
     "passport": "^0.3.2",
     "passport-yahoo": "^0.3.0",
+    "pg": "^6.0.3",
+    "pg-hstore": "^2.3.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
