--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test:server": "mocha spec/server",
     "test:e2e": "mocha spec/e2e",
     "upload": "zip -r -X Archive.zip *",
-    "start": "node server/server.js",
-    "start:dev": "nodemon server/server.js && webpack --watch"
+    "start": "sudo node server/server.js",
+    "start:dev": "sudo nodemon server/server.js && webpack --watch"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
