--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.23.6",
     "yahoo-fantasy": "^0.5.2"
