--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "foundation": "^4.2.1-1",
     "https-passport-yahoo-oauth": "^0.1.2",
     "moment": "^2.14.1",
+    "object-assign": "^4.1.0",
     "passport": "^0.3.2",
     "passport-yahoo": "^0.3.0",
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-foundation": "^0.6.8",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
