Squashed commit of the following:
commit 7c54b6e808726bfe879820818407d4be8536c098
Author: DookPham <dookpham@gmail.com>
Date:   Mon Aug 8 17:11:06 2016 -0700

    Spec tests for dbModel

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "yahoo-fantasy": "^0.5.2"
   },
   "scripts": {
+    "psql": "psql --host=nflsportify.c3mi87ty0bem.us-west-2.rds.amazonaws.com --port=5432 --username=nflguru --dbname=nflsportify",
     "test": "mocha spec/*",
     "test:client": "mocha spec/client",
     "test:server": "mocha spec/server",
