--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "private": true,
   "dependencies": {
     "axios": "^0.13.1",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.6",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
+    "enzyme": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "foundation": "^4.2.1-1",
     "https-passport-yahoo-oauth": "^0.1.2",
+    "jsdom": "^9.4.2",
     "moment": "^2.14.1",
     "object-assign": "^4.1.0",
     "passport": "^0.3.2",
@@ -39,7 +49,7 @@
     "start": "sudo node server/server.js",
     "start:dev": "sudo nodemon server/server.js && webpack --watch",
     "test": "mocha spec/*",
-    "test:client": "mocha spec/client",
+    "test:client": "mocha ./spec/helpers/browser.js spec/client/*",
     "test:server": "mocha spec/server",
     "test:e2e": "mocha spec/e2e",
     "upload": "zip -r -X Archive.zip *",
@@ -51,14 +61,18 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
+    "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
-    "mocha": "^3.0.1",
+    "jsdom": "^9.4.2",
+    "mocha": "^3.0.2",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.3.0",
     "webpack": "^1.13.1"
   }
 }
