--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
+    "chart.js": "^2.2.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "enzyme": "^2.4.1",
