Add d3.js and react-faux-dom as dependencies

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^2.2.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
+    "d3": "^4.2.2",
     "enzyme": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
@@ -33,6 +34,7 @@
     "react": "^15.3.0",
     "react-d3-basic": "^1.6.11",
     "react-dom": "^15.3.0",
+    "react-faux-dom": "^2.7.1",
     "react-foundation": "^0.6.8",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
