--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
+    "chai-jquery": "^2.0.0",
     "chart.js": "^2.2.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
@@ -24,6 +25,7 @@
     "express-session": "^1.14.0",
     "foundation": "^4.2.1-1",
     "https-passport-yahoo-oauth": "^0.1.2",
+    "jquery": "^3.1.0",
     "jsdom": "^9.4.2",
     "moment": "^2.14.1",
     "object-assign": "^4.1.0",
@@ -32,9 +34,12 @@
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
     "react": "^15.3.0",
+    "react-d3-basic": "^1.6.11",
+    "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-faux-dom": "^2.7.1",
     "react-foundation": "^0.6.8",
+    "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
@@ -60,7 +65,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
+    "babel-jest": "^14.1.0",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
@@ -76,6 +83,7 @@
     "nodemon": "^1.10.0",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-hot-loader": "^1.3.0",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1"
   }
