--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "test": "mocha spec/*",
     "test:client": "mocha ./spec/helpers/browser.js spec/client/*",
     "test:server": "mocha spec/server",
+    "test:casper": "node_modules/casperjs/bin/casperjs test --verbose --log-level=debug spec-casper/casperTests.js",
     "test:e2e": "mocha spec/e2e",
     "upload": "zip -r -X Archive.zip *",
     "yahooWorker": "node server/workers/yahooPlayerDataWorker/getYahooPlayerData.js"
@@ -70,6 +71,7 @@
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "casperjs": "^1.1.3",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.2.2",
@@ -84,6 +86,7 @@
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-hot-loader": "^1.3.0",
+    "selenium-webdriver": "^3.0.0-beta-2",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1"
   }
