Successfully get back weekly data for schedule from DB

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "https-passport-yahoo-oauth": "^0.1.2",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.2",
+    "lodash": "^4.15.0",
     "moment": "^2.14.1",
     "object-assign": "^4.1.0",
     "passport": "^0.3.2",
@@ -36,6 +37,7 @@
     "pg-hstore": "^2.3.2",
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.3.0",
     "react-faux-dom": "^2.7.1",
     "react-foundation": "^0.6.8",
