--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "foundation": "^4.2.1-1",
+    "google": "^2.1.0",
     "https-passport-yahoo-oauth": "^0.1.2",
     "jquery": "^3.1.0",
     "jsdom": "^9.4.2",
