--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "test:server": "mocha spec/server",
     "test:e2e": "mocha spec/e2e",
     "upload": "zip -r -X Archive.zip *",
-    "yahooWorker": "node server/workers/yahooPlayerDataWorker/getYahooPlayerData.js"
+    "yahooWorker": "node server/workers/yahooPlayerDataWorker/getYahooPlayerData.js",
+    "build:css":  "sass --watch public/assets/scss/styles.scss:public/dist/css/style.css --style expanded"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
