Add method getPlayerTweets to get specific player in the stats

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "fdata": "node server/workers/getFantasyDataStats.js",
     "psql": "psql --host=nflsportify.c3mi87ty0bem.us-west-2.rds.amazonaws.com --port=5432 --username=nflguru --dbname=nflsportify",
     "start": "sudo node server/server.js",
-    "start:dev": "sudo nodemon server/server.js && webpack --watch",
+    "start:dev": "sudo nodemon server/server.js",
+    "webpack": "webpack --watch",
     "test": "mocha spec/*",
     "test:client": "mocha ./spec/helpers/browser.js spec/client/*",
     "test:server": "mocha spec/server",
