--- a/package.json
+++ b/package.json
@@ -58,13 +58,14 @@
     "test:e2e": "mocha spec/e2e",
     "upload": "zip -r -X Archive.zip *",
     "yahooWorker": "node server/workers/yahooPlayerDataWorker/getYahooPlayerData.js",
-    "build:css":  "sass --watch public/assets/scss/styles.scss:public/dist/css/styles.css --style expanded"
+    "build:css": "sass --watch public/assets/scss/styles.scss:public/dist/css/styles.css --style expanded"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
     "babel-jest": "^14.1.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.13.0",
+    "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
