--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-foundation": "^0.6.8",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
+    "react-sticky": "^5.0.4",
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
     "redux-logger": "^2.6.1",
